# nostr-agent-mcp

./: .gitignore  README.md  pyproject.toml
agent_mcp/: __init__.py  crypto.py  identity.py  messaging.py  relay.py  server.py
tests/: test_crypto.py  test_e2e.py
